[project]
name = "jpyc_python_sdks"
version = "1.0.1"
requires-python = ">=3.12"
description = "Python SDKs for JPYC protocols"
readme = "README.md"

[tool.uv.sources]
core = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pdoc>=15.0.3",
    "pre-commit>=4.2.0",
]
