[project]
name = "jpyc-python-sdks"
version = "1.0.2"
requires-python = ">=3.12"
description = "Python SDKs for JPYC protocols"
readme = "README.md"

[tool.uv.sources]
jpyc-core-sdk = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pdoc>=15.0.3",
    "pre-commit>=4.2.0",
]
